[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/dreamscape/Shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=2]
[ext_resource path="res://src/dreamscape/PlayerInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/dreamscape/SelectionDeck.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/GUI/return-arrow.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.505882, 0.505882, 0.505882, 1 )

[node name="Shop" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_right = 1455.0
margin_bottom = 900.0

[node name="PlayerInfo" parent="VBC" instance=ExtResource( 3 )]
margin_bottom = 45.0
context = 2

[node name="VBC" type="VBoxContainer" parent="VBC"]
margin_top = 49.0
margin_right = 1455.0
margin_bottom = 900.0
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBC/VBC"]
margin_right = 1455.0
margin_bottom = 70.0
hint_tooltip = "Back"

[node name="Back" type="Button" parent="VBC/VBC/HBoxContainer"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Right" type="Control" parent="VBC/VBC/HBoxContainer"]
margin_left = 73.0
margin_right = 1455.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="CC" type="CenterContainer" parent="VBC/VBC"]
margin_top = 73.0
margin_right = 1455.0
margin_bottom = 73.0

[node name="CardPoolShop" type="HBoxContainer" parent="VBC/VBC/CC"]
margin_left = 727.0
margin_right = 727.0
custom_constants/separation = 100

[node name="LineSeparator" type="Panel" parent="VBC/VBC"]
visible = false
margin_top = 106.0
margin_right = 1451.0
margin_bottom = 106.0
custom_styles/panel = SubResource( 2 )

[node name="HBC" type="HBoxContainer" parent="VBC/VBC"]
margin_top = 76.0
margin_right = 1455.0
margin_bottom = 851.0
size_flags_vertical = 3

[node name="MarginLeft" type="Control" parent="VBC/VBC/HBC"]
margin_right = 50.0
margin_bottom = 775.0
rect_min_size = Vector2( 50, 0 )

[node name="MainArea" type="HBoxContainer" parent="VBC/VBC/HBC"]
margin_left = 53.0
margin_right = 1239.0
margin_bottom = 775.0
size_flags_horizontal = 3

[node name="VBC" type="VBoxContainer" parent="VBC/VBC/HBC/MainArea"]
margin_right = 591.0
margin_bottom = 775.0
size_flags_horizontal = 3

[node name="SpecialCards" type="GridContainer" parent="VBC/VBC/HBC/MainArea/VBC"]
margin_right = 591.0
margin_bottom = 386.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 75
columns = 3

[node name="Memories" type="GridContainer" parent="VBC/VBC/HBC/MainArea/VBC"]
margin_top = 389.0
margin_right = 591.0
margin_bottom = 775.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 3

[node name="ArtifactCC" type="CenterContainer" parent="VBC/VBC/HBC/MainArea"]
margin_left = 594.0
margin_right = 1186.0
margin_bottom = 775.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Artifacts" type="GridContainer" parent="VBC/VBC/HBC/MainArea/ArtifactCC"]
margin_left = 296.0
margin_top = 387.0
margin_right = 296.0
margin_bottom = 387.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 2

[node name="Buttons" type="VBoxContainer" parent="VBC/VBC/HBC"]
margin_left = 1242.0
margin_right = 1402.0
margin_bottom = 775.0

[node name="MarginUp" type="Control" parent="VBC/VBC/HBC/Buttons"]
margin_right = 160.0
margin_bottom = 131.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="VBC/VBC/HBC/Buttons"]
margin_top = 134.0
margin_right = 160.0
margin_bottom = 294.0
rect_min_size = Vector2( 160, 160 )
text = "Remove Card"

[node name="RemoveCost" type="Label" parent="VBC/VBC/HBC/Buttons"]
margin_top = 297.0
margin_right = 160.0
margin_bottom = 318.0
align = 1

[node name="Push" type="Control" parent="VBC/VBC/HBC/Buttons"]
margin_top = 321.0
margin_right = 160.0
margin_bottom = 453.0
size_flags_vertical = 3

[node name="Progress" type="Button" parent="VBC/VBC/HBC/Buttons"]
margin_top = 456.0
margin_right = 160.0
margin_bottom = 616.0
rect_min_size = Vector2( 160, 160 )
text = "Progress Card"

[node name="ProgressCost" type="Label" parent="VBC/VBC/HBC/Buttons"]
margin_top = 619.0
margin_right = 160.0
margin_bottom = 640.0
align = 1

[node name="MarginDown" type="Control" parent="VBC/VBC/HBC/Buttons"]
margin_top = 643.0
margin_right = 160.0
margin_bottom = 775.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginRight" type="Control" parent="VBC/VBC/HBC"]
margin_left = 1405.0
margin_right = 1455.0
margin_bottom = 775.0
rect_min_size = Vector2( 50, 0 )

[node name="Deck" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBC/VBC/HBC/Buttons/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="VBC/VBC/HBC/Buttons/Progress" to="." method="_on_ProgressCards_pressed"]
